blocks: fixes short text alignment on block view

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -43,10 +43,11 @@
     pointer-events all
 
   .grid__block__author
-      visibility visible
+    visibility visible
 
 .grid__block__content
   height 100%
+  width 100%
 
 .grid__block--block .grid__block__inner, .grid__block--loading .grid__block__inner
   background-size 80px 80px
